--- a/style.css
+++ b/style.css
@@ -1,15 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Schoolbell&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Schoolbell&display=swap");
 
 :root {
   --color-primary: #f0f0f0;
-  --color-secondary: #8700f5;
+  --color-secondary: #727cd8;
   --color-tertiary: #0f0902;
-  --color-primary-darker: #010f1a;
-  --color-secondary-darker: #000808;
-  --color-tertiary-darker: #8600f4;
-  --color-primary-brighter: #035696;
-  --color-secondary-brighter: #1fb9af;
-  --color-tertiary-brighter: #272426;
 }
 
 *,
@@ -43,37 +37,12 @@ body {
   color: var(--color-tertiary);
   padding: 2rem 2.5rem;
   color: var(--color-primary);
-  font-family: 'Schoolbell', cursive;
+  font-family: "Schoolbell", cursive;
 }
-
-/* .links ul li a {
-  font-size: 2.5rem;
-  text-decoration: none;
-  color: var(--color-tertiary);
-  padding: 2rem 2.5rem;
-  color: var(--color-primary);
-  font-family: 'Schoolbell', cursive;
-} */
 
 .links ul li:nth-child(1) {
   float: left;
 }
-
-/* .links ul li:nth-child(2) {
-  float: right;
-} */
-
-/* .header {
-  height: 100vh;
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: transparent;
-  background-size: cover;
-  color: var(--color-tertiary-brighter);
-  border-radius: 0.5rem;
-} */
 
 .background__front {
   width: 100%;
@@ -82,7 +51,6 @@ body {
   filter: brightness(0.5);
   text-align: center;
 }
-
 
 .header__description {
   display: inline-block;
@@ -93,7 +61,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: var(--color-tertiary-brighter);
+  color: var(--color-tertiary);
   filter: brightness(100);
 }
 
@@ -139,10 +107,6 @@ body {
 
 /* Section --2 */
 
-
-
-
-
 .spells__information {
   font-size: 4rem;
   border: 1px solid black;
@@ -158,7 +122,7 @@ body {
 
 .spells__information p {
   position: relative;
-  padding:0.5rem;
+  padding: 0.5rem;
   top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -168,15 +132,13 @@ body {
   font-size: 1.5rem;
 }
 
-.spells__container--1{
+.spells__container--1 {
   text-align: center;
 }
 
-.spells__container--2{
+.spells__container--2 {
   text-align: center;
 }
-
-
 
 /* Section--1 */
 
@@ -190,8 +152,6 @@ body {
   margin-top: 5rem;
   padding: 0 2rem 0 2rem;
   font-size: 3.5rem;
-  
-  
 }
 
 .search__container button {
@@ -204,7 +164,7 @@ body {
 }
 
 .search__container button:hover {
-  color: var(--color-secondary-darker);
+  color: var(--color-tertiary);
 }
 
 .search__container input {
@@ -266,7 +226,7 @@ body {
 }
 
 .show__more:hover {
-  background-color: var(--color-tertiary-brighter);
+  background-color: var(--color-tertiary);
   color: var(--color-primary);
   cursor: pointer;
 }
@@ -287,15 +247,13 @@ body {
   position: relative;
 }
 
-
 .footer__img {
   max-width: 80%;
   max-height: 100%;
   z-index: -1;
-
 }
 
-.footer__img img{
+.footer__img img {
   display: inline-block;
   display: flex;
   max-height: 50%;
@@ -303,36 +261,35 @@ body {
   top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
 
 .footer__copyright {
   text-align: center;
   position: absolute;
-  margin: 5rem 0 0 0 ;
+  margin: 5rem 0 0 0;
   font-size: 3rem;
 }
 
 .footer__copyright a {
   font-size: 3rem;
   text-decoration: none;
-  color: var(--color-secondary-brighter)
+  color: var(--color-secondary);
 }
 
-.links__icons{
+.links__icons {
   font-size: 25rem;
   position: absolute;
 }
 
-.fa-twitter{
+.fa-twitter {
   color: rgb(61, 178, 255);
 }
 
-.fa-github{
+.fa-github {
   color: rgb(41, 41, 41);
 }
 
-.fa-linkedin{
+.fa-linkedin {
   color: rgb(0, 69, 133);
 }
 
@@ -342,107 +299,88 @@ body {
   display: none;
 }
 
-.return__button{
-  
+.return__button {
   position: fixed;
   top: 90%;
   left: 90%;
   transform: translate(-50%, -50%);
-  cursor:pointer;
+  cursor: pointer;
   z-index: 100;
   opacity: 0.7;
 }
 
-.fa-chevron-up{
+.fa-chevron-up {
   font-size: 5rem;
   text-align: center;
   width: 5rem;
   height: 5rem;
-  background-color: var(--color-primary-darker);
+  background-color: var(--color-tertiary);
   color: var(--color-primary);
   border-radius: 1rem;
   z-index: 100;
-  
 }
-
 
 /* Responsive - settings */
 
 /* -----max-width: 767px-------*/
 
-@media all and (max-width: 767px){
-
-
-.header__description {
+@media all and (max-width: 767px) {
+  .header__description {
     max-width: 100%;
   }
 
-.header__description h1 {
-  font-size: 5rem;
-}
+  .header__description h1 {
+    font-size: 5rem;
+  }
 
+  .search__container input {
+    width: 40rem;
+  }
 
+  .search__container {
+    margin: 0 0 5rem 0;
+    padding: 0;
+  }
 
+  .spells__information {
+    font-size: 5rem;
+    width: 80%;
+    height: 15rem;
+  }
 
+  .character__data {
+    margin: 0;
+    width: 90%;
+  }
 
-.search__container input {
-  width: 40rem;
-}
+  .character__information {
+    max-width: 100%;
+    margin-bottom: 4rem;
+  }
 
-.search__container {
-  margin: 0 0 5rem 0;
-  padding: 0;
-}
+  .character__information h1 {
+    text-align: center;
+    margin: 2rem;
+  }
 
-.spells__information {
-  font-size: 5rem;
-  width: 80%;
-  height: 15rem;
-}
-
-
-.character__data{
-  margin: 0;
-  width: 90%;
-}
-
-.character__information {
-  max-width: 100%;
-  margin-bottom: 4rem;
-}
-
-.character__information h1 {
-  text-align: center;
-  margin: 2rem;
-}
-
-.character__image {
-  float: none;
-  text-align: center;
-  
-}
-
-
+  .character__image {
+    float: none;
+    text-align: center;
+  }
 }
 
 /* -----max-width: 992px-------*/
-@media all and (max-width: 992px){
+@media all and (max-width: 992px) {
   .links ul li {
     max-width: 100%;
     justify-content: center;
-    
-  
   }
-  
+
   .links ul li:nth-child(1) {
     float: none;
-    
   }
-  
+
   .links ul li:nth-child(2) {
     float: none;
   }
-
 }
-
-  
