--- a/style.css
+++ b/style.css
@@ -2,11 +2,59 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #000051;
+    background-color: #002171;
   }
 
-  
+    #map {
+      position: absolute;
+      top: 0px;
+      bottom:0px;
+      left: 0px;
+      right:0px;
 
-  #map {
-    height: 100%;
   }
+
+  .navigation{
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    background-color: #002171;
+    display:flex;
+    margin:  60px 0 40px 0;
+    padding:10px 0;
+    justify-content: space-around;
+    z-index: 10;
+    text-align: center;
+    opacity: 0.5;
+    
+}
+
+a {
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+   text-decoration: none;
+   font-weight: bold;
+   color: #6ff9ff;
+   font-size: 28px;
+}
+
+.aurora{
+    position: relative;
+}
+
+.AuroraMovie{
+    height: 100vh;
+    width: 100%;
+    object-fit:cover;
+    filter:brightness(0.6)
+}
+
+.AuroraTitle {
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    color:honeydew;
+    font-size: 144px;
+    font-family: 'Fruktur', cursive;
+}
